--- a/Views/Users/Index.cshtml
+++ b/Views/Users/Index.cshtml
@@ -100,7 +100,7 @@
                         <div class="col-12">
                             <div class="mb-3">
                                 <label class="form-label" for="ngaysinh">Ngày sinh</label>
-                                <input type="text" id="ngaysinh" class="form-control flatpickr" placeholder="Chọn ngày sinh người dùng">
+                                <input type="date" id="ngaysinh" class="form-control flatpickr" placeholder="Chọn ngày sinh người dùng">
                                 <span class="text-danger" id="valid-ngaysinh"></span>
                             </div>
                         </div>
