--- a/Views/Users/_EditUser.cshtml
+++ b/Views/Users/_EditUser.cshtml
@@ -58,7 +58,7 @@
         <div class="col-12">
             <div class="mb-3">
                 <label class="form-label" for="editngaysinh">Ngày sinh</label>
-                <input value="@(Model.NgaySinh != null ? Model.NgaySinh.Value.ToString("yyyy-MM-dd") : ""))" type="text" id="editngaysinh" class="form-control flatpickr" placeholder="Chọn ngày sinh người dùng">
+                <input value="@(Model.NgaySinh != null ? Model.NgaySinh.Value.ToString("yyyy-MM-dd") : "")" type="text" id="editngaysinh" class="form-control flatpickr" placeholder="Chọn ngày sinh người dùng">
                 <span class="text-danger" id="valid-editngaysinh"></span>
             </div>
         </div>
