--- a/Views/TeachingAssistant/Apply.cshtml
+++ b/Views/TeachingAssistant/Apply.cshtml
@@ -46,7 +46,7 @@
 </section>
 
 <div class="modal fade" id="apply" tabindex="-1" role="dialog" aria-labelledby="apply" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="applyTitle">Đăng ký trợ giảng LHP: 221_71ITBS10103_0101 - Nhập môn công nghệ thông tin.</h5>
@@ -88,7 +88,7 @@
                     <div class="col-md-6">
                         <div class="mb-3">
                             <label class="form-label" for="ngaysinh">Ngày sinh <span class="text-danger">*</span></label>
-                            <input name="@tksv.ID" type="text" id="ngaysinh" class="form-control flatpickr" placeholder="Chọn ngày sinh">
+                            <input name="@tksv.ID" value="@(tksv.NgaySinh.Value == null ? "" : tksv.NgaySinh.Value.ToString("yyyy-MM-dd"))" type="text" id="ngaysinh" class="form-control flatpickr" placeholder="Chọn ngày sinh">
                             <span class="text-danger" id="valid-ngaysinh"></span>
                         </div>
                     </div>
@@ -143,7 +143,7 @@
                         </div>
                     </div>
                     <div class="col-12">
-                        <label class="form-label" for="hinhanhmc">Hình ảnh minh chứng <small><small class="text-muted"><i>(JPG, JPEG, PNG)</i></small></small> <span class="text-danger">*</span></label>
+                        <label class="form-label" for="hinhanhmc">Hình ảnh minh chứng <small><small class="text-muted"><i>(Chọn tối đa 3 hình ảnh < 50MB. JPG, JPEG, PNG)</i></small></small> <span class="text-danger">*</span></label>
                         <div class="mb-3">
                             <input type="file" class="form-control form-control-file" id="hinhanhmc" accept="image/png, image/jpg, image/jpeg">
                             <span class="text-danger" id="valid-hinhanhmc"></span>
