--- a/Views/Shared/_TeacherLayout.cshtml
+++ b/Views/Shared/_TeacherLayout.cshtml
@@ -82,64 +82,16 @@
                     </li>
 
                     <li class="nav-item">
-                        <a id="parent-studentaffairs-studentaffairssemesterandmajor" class="nav-link  " href="#"
-                           data-bs-toggle="collapse" data-bs-target="#nav-studentaffairs-studentaffairssemesterandmajor" aria-expanded="false"
-                           aria-controls="nav-studentaffairs-studentaffairssemesterandmajor">
-                            <i class="nav-icon fe fe-layers me-2"></i> Học kỳ & Ngành
-                        </a>
-                        <div id="nav-studentaffairs-studentaffairssemesterandmajor" class="collapse "
-                             data-bs-parent="#sideNavbar">
-                            <ul class="nav flex-column">
-                                <li class="nav-item ">
-                                    <a id="child-studentaffairs-studentaffairssemesterandmajor-hocky" class="child-nav-link nav-link "
-                                       href="@Url.Action("semester", "TermAndMajor")">
-                                        Học kỳ
-                                    </a>
-                                </li>
-                                <!-- Nav item -->
-                                <li class="nav-item ">
-                                    <a id="child-studentaffairs-studentaffairssemesterandmajor-nganh" class="child-nav-link nav-link "
-                                       href="@Url.Action("major", "TermAndMajor")">
-                                        Ngành
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </li>
-
-
-                    <li class="nav-item">
-                        <a id="parent-studentaffairs-studentaffairstimetable" class="nav-link  " href="#"
-                           data-bs-toggle="collapse" data-bs-target="#nav-studentaffairs-studentaffairstimetable" aria-expanded="false"
-                           aria-controls="nav-studentaffairs-studentaffairstimetable">
+                        <a id="child-studentaffairs-studentaffairsdashboard-index" class="nav-link child-nav-link " href="@Url.Action("index", "TimeTable")">
                             <i class="nav-icon fe fe-calendar me-2"></i> Thời khóa biểu
                         </a>
-                        <div id="nav-studentaffairs-studentaffairstimetable" class="collapse "
-                             data-bs-parent="#sideNavbar">
-                            <ul class="nav flex-column">
-                                <li class="nav-item ">
-                                    <a id="child-studentaffairs-studentaffairstimetable-index" class="child-nav-link nav-link "
-                                       href="@Url.Action("index", "TimeTable")">
-                                        Xem TKB
-                                    </a>
-                                </li>
-                                <!-- Nav item -->
-                                <li class="nav-item ">
-                                    <a id="child-studentaffairs-studentaffairstimetable-import" class="child-nav-link nav-link "
-                                       href="@Url.Action("import", "TimeTable")">
-                                        Import TKB
-
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
                     </li>
 
                     <li class="nav-item">
                         <a id="parent-trogiang" class="nav-link  " href="#"
                            data-bs-toggle="collapse" data-bs-target="#nav-trogiang" aria-expanded="false"
                            aria-controls="nav-trogiang">
-                            <i class="nav-icon fe fe-calendar me-2"></i> Trợ giảng
+                            <i class="nav-icon fe fe-briefcase me-2"></i> Trợ giảng
                         </a>
                         <div id="nav-trogiang" class="collapse "
                              data-bs-parent="#sideNavbar">
