--- a/Views/ClassSection/Index.cshtml
+++ b/Views/ClassSection/Index.cshtml
@@ -123,7 +123,7 @@
 
                                             <span data-bs-toggle="modal" data-bs-target="#dexuattrogiang">
                                                 <a style="font-size: 20px" role="button" data-bs-toggle="tooltip" data-bs-html="true" title="Đề xuất trợ giảng" class="text-warning">
-                                                    <span data-bs-toggle="tooltip" data-bs-html="true" title="Đề xuất TA"><i class="bi bi-bookmark-star me-2"></i></span>
+                                                    <span><i class="bi bi-bookmark-star me-2"></i></span>
                                                 </a>
                                             </span>
 
