--- a/Views/Shared/_TALayout.cshtml
+++ b/Views/Shared/_TALayout.cshtml
@@ -84,18 +84,47 @@
                                     </a>
                                 </li>
                                 <li class="nav-item ">
+                                    <a id="child-trogiang-resultapply" class="child-nav-link nav-link "
+                                       href="@Url.Action("ResultApply", "TeachingAssistant")">
+                                        Kết quả đăng ký
+                                    </a>
+                                </li>
+                                <li class="nav-item ">
                                     <a id="child-trogiang-tasklist" class="child-nav-link nav-link "
                                        href="@Url.Action("TaskList", "TeachingAssistant")">
                                         Công việc
                                     </a>
                                 </li>
-
+                                <li class="nav-item ">
+                                    <a id="child-trogiang-evaluation" class="child-nav-link nav-link "
+                                       href="@Url.Action("Evaluation", "TeachingAssistant")">
+                                        Đánh giá công việc
+                                    </a>
+                                </li>
                             </ul>
                         </div>
                     </li>
-
+                    <li class="nav-item">
+                        <a id="child-classsection-index" class="nav-link child-nav-link " href="@Url.Action("QuanLyLopHoc", "ClassSection")">
+                            <!-- https://feathericons.dev/?search=server&iconset=feather -->
+                            <span>
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="18" height="18" class="main-grid-item-icon" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
+                                    <rect height="8" rx="2" ry="2" width="20" x="2" y="2" />
+                                    <rect height="8" rx="2" ry="2" width="20" x="2" y="14" />
+                                    <line x1="6" x2="6.01" y1="6" y2="6" />
+                                    <line x1="6" x2="6.01" y1="18" y2="18" />
+                                </svg>
+                            </span>
+                            <span class="ms-2">Lớp học phần</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a id="child-studentaffairs-studentaffairstimetable-index" class="nav-link child-nav-link " href="@Url.Action("index", "TimeTable")">
+                            <i class="nav-icon fe fe-calendar me-2"></i>
+                            Thời khóa biểu
+                        </a>
+                    </li>
                 </ul>
-
             </div>
         </nav>
 
@@ -116,6 +145,70 @@
 
                         </a>
                         <ul class="navbar-nav navbar-right-wrap ms-2 d-flex nav-top-wrap">
+                            <!--Thông báo-->
+                            <li class="dropdown stopevent">
+                                <a class="btn btn-light btn-icon rounded-circle indicator indicator-primary"
+                                   href="#"
+                                   role="button"
+                                   id="dropdownNotification"
+                                   data-bs-toggle="dropdown"
+                                   aria-haspopup="true"
+                                   aria-expanded="false">
+                                    <i class="fe fe-bell"></i>
+                                </a>
+                                <div class="dropdown-menu dropdown-menu-end dropdown-menu-lg" aria-labelledby="dropdownNotification">
+                                    <div>
+                                        <div class="border-bottom px-3 pb-3 d-flex justify-content-between align-items-center">
+                                            <span class="h4 mb-0">Thông Báo</span>
+                                        </div>
+                                        <div class="p-3 border-bottom ">
+                                            <div class="input-group">
+                                                <input class="form-control form-control-sm" placeholder="nhập từ khóa cần tìm" type="search" />
+                                                <a class="btn btn-secondary btn-sm" role="button">
+                                                    <i class="fe fe-search"></i>
+                                                </a>
+                                            </div>
+                                        </div>
+                                        <!-- List group -->
+                                        <ul class="list-group list-group-flush" data-simplebar style="max-height: 300px">
+                                            @for (int i = 0; i < 10; i++)
+                                            {
+                                                <li class="list-group-item">
+                                                    <div class="row">
+                                                        <div class="col">
+                                                            <a class="text-body" href="#">
+                                                                <div class="d-flex">
+                                                                    <img src="~/Content/img/notifi.png" alt="" class="avatar-md" />
+                                                                    <div class="ms-3">
+                                                                        <h5 class="fw-bold mb-1">Tiêu đề thông báo @i</h5>
+                                                                        <p class="mb-3">Nội dung thông báo @i</p>
+                                                                        <span class="fs-6">
+                                                                            <span>
+                                                                                <span class="bi-clock-history me-1"></span>
+                                                                                1@(i):20 2@(i)/10/2024
+                                                                            </span>
+                                                                        </span>
+                                                                    </div>
+                                                                </div>
+                                                            </a>
+                                                        </div>
+                                                        <div class="col-auto text-center me-2">
+                                                            <div>
+                                                                <a href="#" class="bg-transparent" data-bs-toggle="tooltip" data-bs-placement="top" title="Xóa thông báo">
+                                                                    <i class="fe fe-x"></i>
+                                                                </a>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </li>
+                                            }
+                                        </ul>
+                                        <div class="border-top px-3 pt-3 pb-0">
+                                            @*<a href="../../pages/notification-history.html" class="text-link fw-semibold">See all Notifications</a>*@
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
                             <!-- List -->
                             <li class="dropdown ms-2">
                                 <a class="rounded-circle" href="#" role="button" id="dropdownUser" data-bs-toggle="dropdown" aria-expanded="false">
@@ -139,7 +232,7 @@
                                     <div class="dropdown-divider"></div>
                                     <ul class="list-unstyled">
                                         <li>
-                                            <a class="dropdown-item" href="">
+                                            <a class="dropdown-item" role="button" data-bs-toggle="modal" data-bs-target="#thongtincanhanmodal">
                                                 <i class="fe fe-user me-2"></i> Thông tin cá nhân
                                             </a>
                                         </li>
