--- a/Views/TeachingAssistant/_TaskList.cshtml
+++ b/Views/TeachingAssistant/_TaskList.cshtml
@@ -285,6 +285,9 @@
                                                     <div class="card-body p-3 d-flex flex-column gap-4">
                                                         <div class="d-flex justify-content-between">
                                                             <div class="ps-sm-1">
+                                                                <h5 class="badge bg-danger text-center w-100">
+                                                                    <i class="bi bi-x-circle me-2"></i>Được đánh giá chưa hoàn thành
+                                                                </h5>
                                                                 <a role="button" data-bs-toggle="modal" data-bs-target="#chitietmodal">
                                                                     <label role="button" data-bs-toggle="modal" data-bs-target="#chitietmodal" class="form-check-label task-name-label">
                                                                         <i style="font-size: 16px" class="bi bi-bookmark-check-fill text-danger me-2"></i>
@@ -325,6 +328,9 @@
                                                     <div class="card-body p-3 d-flex flex-column gap-4">
                                                         <div class="d-flex justify-content-between">
                                                             <div class="ps-sm-1">
+                                                                <h5 class="badge bg-success text-center w-100">
+                                                                    <i class="bi bi-check-circle me-2"></i>Được đánh giá đã hoàn thành
+                                                                </h5>
                                                                 <a role="button" data-bs-toggle="modal" data-bs-target="#chitietmodal">
                                                                     <label role="button" data-bs-toggle="modal" data-bs-target="#chitietmodal" class="form-check-label task-name-label">
                                                                         <i style="font-size: 16px" class="bi bi-bookmark-check-fill text-danger me-2"></i>
